syntax = "proto3";

package common;

// Sub-message used in both single and batch requests
message SinglePrompt {
  string request_id = 1;  // Id to identify the request
  string prompt = 2;      // Request prompt
}

// Generation configuration used in both single and batch requests
message GenerationConfig {
  int32 num_beams = 1;                // Number of beams for beam search. More beams increase diversity of results, but slower generation.
  bool do_sample = 2;                 // Whether to use sampling; set to true to have more diverse results, false for deterministic output.
  float temperature = 3;              // Controls randomness: Lower closer to 0 means less random, higher means more random.
  float top_p = 4;                    // Nucleus sampling: higher means more diversity, lower means closer to greedy decoding.
  int32 top_k = 5;                    // Top-k sampling: the number of highest probability vocabulary tokens to keep for top-k-filtering.
  int32 max_new_tokens = 6;           // The maximum number of new tokens to generate.
  float repetition_penalty = 7;       // Penalty for repetition: >1 discourages repetition, <1 encourages it.
  float length_penalty = 8;           // Controls length of generated text. Values >1 encourage longer sequences, <1 shorter.
}